Now possible to actually store data in the Events
