# server/core/src/main/kotlin/com/richodemus/chronicler/server/core/Event.kt
@@ -1,3 +1,3 @@
 package com.richodemus.chronicler.server.core
 
-data class Event(val id: String, val page: Long?)
+data class Event(val id: String, val page: Long?, val data: String)
